complete rough add layer dialog.

--- a/angular/src/js/admin/layer-create-input-form.html
+++ b/angular/src/js/admin/layer-create-input-form.html
@@ -36,6 +36,6 @@
     </div>
     <ul class="list-inline pull-right">
         <li><button class="btn btn-default" ng-click="dismiss()">Cancel</button></li>
-        <li><button class="btn btn-default" ng-click="create()" ng-disabled="newLayerForm.$invalid">Create</button></li>
+        <li><button class="btn btn-default" ng-click="add()" ng-disabled="newLayerForm.$invalid">Create</button></li>
     </ul>
 </form>
