more layer admin + panes

--- a/angular/src/js/admin/layer-create-idfmt-popover.html
+++ b/angular/src/js/admin/layer-create-idfmt-popover.html
@@ -5,7 +5,7 @@
         desireable to allow the feature data to be updated in place rather than
         recreated.  For example if other entities are to be associated with a given feature
         to prevent data integrity problems.</p>
-    <p>The property format syntax is basic <code>sprintf</code> format without <thead>
+    <p>The property format syntax is basic <code>sprintf</code> format without
         surrounding <code>&quot;</code> characters.  Unlike standard <code>sprintf</code>
         you can wrap optional properties in <code>[]</code>.</p>
     <p><em>Example:</em> If your features had a unique property, <code>GEOID</code> that
