--- a/angular/src/js/admin/layer-create-nmfmt-popover.html
+++ b/angular/src/js/admin/layer-create-nmfmt-popover.html
@@ -1,7 +1,7 @@
 <div>
     <p>Each feature added to the system should have a friendly name to identify it.
         Feature names are generated from each feature's properties.</p>
-    <p>The property format syntax is basic <code>sprintf</code> format without <thead>
+    <p>The property format syntax is basic <code>sprintf</code> format without
         surrounding <code>&quot;</code> characters.  Unlike standard <code>sprintf</code>
         you can wrap optional properties in <code>[]</code>.</p>
     <p><em>Example:</em> If your features had a unique property, <code>UNITNAME</code> that
