--- a/angular/src/js/admin/layer-admin.html
+++ b/angular/src/js/admin/layer-admin.html
@@ -1,8 +1,18 @@
-<h1>Layer Administration</h1>
-<button class="btn btn-default" ng-click="createLayer()">New Layer</button>
-<ul>
-    <li ng-repeat="l in layers.list">
-        <label>{{l.name}}</label>
-        {{l._sourceFile.filename}}
-    </li>
-</ul>
+<pane-set unique-id="layer-admin" open-heading-cols="4">
+    <pane-set-header>
+        <div class="pane-set-title" title="Layer Administration"></div>
+    </pane-set-header>
+    <pane-set-footer>
+        <button class="btn btn-default pull-right" ng-click="createLayer()">New Layer</button>
+    </pane-set-footer>
+
+    <pane ng-repeat="l in layers.list" unique-id="pane-{{l._id}}">
+        <pane-heading>
+            <h4>{{l.name}}</h4>
+            <div class="file-info" file="l._sourceFile"></div>
+        </pane-heading>
+        <div>
+            <h4>TODO map, etc. for {{l.name}}</h4>
+        </div>
+    </pane>
+</pane-set>
