attempt a  per layer map on the layer admin this has quite a few problems but catching the state of things

--- a/angular/src/js/admin/layer-admin.html
+++ b/angular/src/js/admin/layer-admin.html
@@ -11,8 +11,8 @@
             <h4>{{l.name}}</h4>
             <div class="file-info" file="l._sourceFile"></div>
         </pane-heading>
-        <div>
-            <h4>TODO map, etc. for {{l.name}}</h4>
+        <div ng-if="isPaneActive('pane-'+l._id)">
+            <div class="layer-admin-map" layer="l" />
         </div>
     </pane>
 </pane-set>
