--- a/angular/src/js/admin/layer-admin.html
+++ b/angular/src/js/admin/layer-admin.html
@@ -10,6 +10,7 @@
         <pane-heading>
             <h4>{{l.name}}</h4>
             <div class="file-info" file="l._sourceFile"></div>
+            <a href ng-click="removeLayer(l)">Remove layer</a>
         </pane-heading>
         <div ng-if="isPaneActive('pane-'+l._id)">
             <div class="layer-admin-map" layer="l" />
