temporarily require ui.bootstrap

--- a/angular/src/js/admin/layer-admin.html
+++ b/angular/src/js/admin/layer-admin.html
@@ -1,3 +1,4 @@
+<div class="solo-view">
 <pane-set unique-id="layer-admin" open-heading-cols="4">
     <pane-set-header>
         <div class="pane-set-title" title="Layer Administration"></div>
@@ -17,3 +18,4 @@
         </div>
     </pane>
 </pane-set>
+</div>
