--- a/angular/src/js/admin/layer-create-input-form.html
+++ b/angular/src/js/admin/layer-create-input-form.html
@@ -1,41 +1,43 @@
 <form name="newLayerForm" ng-if="userInput && preResults">
-    <div class="form-group">
-        <label for="inputFile">Source File</label>
-        <div id="inputFile" class="file-info" file="uploadedFile"></div>
-    </div>
-    <div class="form-group">
-        <div class="text-danger pull-right" ng-if="newLayerForm.$error.layerNameinUse.length">
-            The layer name &quot;{{newLayerForm.$error.layerNameinUse[0].$viewValue}}&quot; is already in use.
+    <div layout="column">
+        <div style="margin-bottom: 10px;">
+            <label for="inputFile">Source File</label>
+            <div id="inputFile" class="file-info" file="uploadedFile"></div>
         </div>
-        <label for="layerName">Layer Name <i uib-popover-template="'js/admin/layer-create-lname-popover.html'" popover-placement="auto right" class="fa fa-info-circle" aria-hidden="true"></i> *</label>
-        <input id="layerName" type="text" class="form-control"
-               ng-model="userInput.layerName" layer-name-validate required />
-    </div>
-    <div class="form-group">
-        <div class="text-danger pull-right" ng-if="newLayerForm.$error.userInput_featureIdFmt_propertyFormat.length">
-            Invalid format
+        <md-input-container>
+            <label>Layer Name <!--i uib-popover-template="'js/admin/layer-create-lname-popover.html'" popover-placement="auto right" class="fa fa-info-circle" aria-hidden="true"></i--></label>
+            <input name="layerName" type="text" ng-model="userInput.layerName" layer-name-validate required />
+            <div ng-messages="newLayerForm.layerName.$error">
+                <div ng-message="layerNameinUse">This layer name is already in use.</div>
+            </div>
+        </md-input-container>
+        <md-input-container>
+            <label>Feature Id Format <!--i uib-popover-template="'js/admin/layer-create-idfmt-popover.html'" popover-placement="auto right" class="fa fa-info-circle" aria-hidden="true"></i--></label>
+            <input name="featureIdFmt" type="text" ng-model="userInput.featureIdFmt"
+                   property-format-validate="preResults.exampleProperties" required />
+           <div ng-messages="newLayerForm.featureIdFmt.$error">
+               <div ng-message="propertyFormat">Invalid format.</div>
+           </div>
+        </md-input-container>
+        <md-input-container>
+            <label for="featureNameFmt">Feature Name Format <!--i uib-popover-template="'js/admin/layer-create-nmfmt-popover.html'" popover-placement="auto right" class="fa fa-info-circle" aria-hidden="true"></i--></label>
+            <input name="featureNameFmt" type="text" ng-model="userInput.featureNameFmt"
+                   property-format-validate="preResults.exampleProperties" required />
+           <div ng-messages="newLayerForm.featureNameFmt.$error">
+               <div ng-message="propertyFormat">Invalid format.</div>
+           </div>
+        </md-input-container>
+        <md-input-container>
+            <label>Layer Source <!--i uib-popover-template="'js/admin/layer-create-lsource-popover.html'" popover-placement="auto right" class="fa fa-info-circle" aria-hidden="true"></i--></label>
+            <input name="layerSource" type="url" ng-model="userInput.layerSource" />
+            <div ng-messages="newLayerForm.layerSource.$error">
+                <div ng-message="url">Invalid url.</div>
+            </div>
+        </md-input-container>
+        <div layout="row" layout-align="end end">
+            <md-button ng-click="dismiss()">Cancel</md-button>
+            <md-button class="md-primary" ng-click="add()" ng-disabled="newLayerForm.$invalid">OK</md-button>
         </div>
-        <label for="featureIdFmt">Feature Id Format <i uib-popover-template="'js/admin/layer-create-idfmt-popover.html'" popover-placement="auto right" class="fa fa-info-circle" aria-hidden="true"></i> *</label>
-        <input id="featureIdFmt" type="text" class="form-control"
-               ng-model="userInput.featureIdFmt"
-               property-format-validate="preResults.exampleProperties" required />
     </div>
-    <div class="form-group">
-        <div class="text-danger pull-right" ng-if="newLayerForm.$error.userInput_featureNameFmt_propertyFormat.length">
-            Invalid format
-        </div>
-        <label for="featureNameFmt">Feature Name Format <i uib-popover-template="'js/admin/layer-create-nmfmt-popover.html'" popover-placement="auto right" class="fa fa-info-circle" aria-hidden="true"></i> *</label>
-        <input id="featureNameFmt" type="text" class="form-control"
-               ng-model="userInput.featureNameFmt"
-               property-format-validate="preResults.exampleProperties" required />
-    </div>
-    <div class="form-group">
-        <label for="layerSource">Layer Source <i uib-popover-template="'js/admin/layer-create-lsource-popover.html'" popover-placement="auto right" class="fa fa-info-circle" aria-hidden="true"></i> </label>
-        <input id="layerSource" type="url" class="form-control"
-               ng-model="userInput.layerSource" />
-    </div>
-    <ul class="list-inline pull-right">
-        <li><button class="btn btn-default" ng-click="dismiss()">Cancel</button></li>
-        <li><button class="btn btn-default" ng-click="add()" ng-disabled="newLayerForm.$invalid">Create</button></li>
-    </ul>
 </form>
+<div class="example-layer-properties"></div>
