--- a/angular/src/js/admin/layer-create.html
+++ b/angular/src/js/admin/layer-create.html
@@ -1,31 +1,28 @@
-<div class="clearfix modal-header">
-    <ul class="list-inline pull-right">
-        <li class="spinner" is-working="!STATE || [STATE.FILE_UPLOAD,STATE.USER_INPUT].indexOf(STATE) !== -1"></li>
-        <li><a href class="pull-right" ng-click="dismiss()"><i class="fa fa-times-circle-o fa-2x"></i></a></li>
-    </ul>
+<section class="app-panel add-layer-dialog">
+    <md-toolbar class="md-toolbar-tools">
+        <h2 flex md-truncate>Add new layer</h2>
+        <md-progress-circular md-mode="indeterminate" ng-if="!STATE || [STATE.FILE_UPLOAD,STATE.USER_INPUT].indexOf(STATE) !== -1"></md-progress-circular>
+        <md-button class="md-icon-button close-dialog" aria-label="Close dialog" ng-click="dismiss()"></md-button>
+    </md-toolbar>
+    <md-content layout-padding>
+        <p ng-if="!STATE">Waiting to establish connection...</p>
 
-    <h2>Add Layer</h2>
-</div>
-<div class="clearfix modal-body">
-    <p ng-if="!STATE">Waiting to establish connection...</p>
+        <div ng-show="STATE === STATES.FILE_UPLOAD">
+            <p>Start by uploading the source of your layer (currently only zipped shapfile).</p>
+            <input type="file" file-model="fileToUpload" file-resource="fileResource" />
+        </div>
 
-    <div ng-show="STATE === STATES.FILE_UPLOAD">
-        <p>Start by uploading the source of your layer (currently only zipped shapfile).</p>
-        <input type="file" file-model="fileToUpload" file-resource="fileResource" />
-    </div>
+        <div ng-show="STATE === STATES.USER_INPUT">
+            <p>Your new layer will have <mark>{{preResults.featureCount}}</mark> features (assuming they can all
+                be successfully indexed).</p>
+            <div class="layer-create-input-form clearfix"></div>
+        </div>
 
-    <div ng-show="STATE === STATES.USER_INPUT">
-        <p>Your new layer will have <mark>{{preResults.featureCount}}</mark> features (assuming they can all
-            be successfully indexed).</p>
-        <div class="layer-create-input-form clearfix"></div>
-        <div class="example-layer-properties"></div>
-    </div>
-
-    <div ng-show="STATE === STATES.POST_PROCESS_RUNNING || (STATE === STATES.COMPLETE && userInput)">
-        <ul class="list-unstyled layer-create-messages">
-            <li ng-if="STATE === STATES.COMPLETE && userInput">Layer {{userInput.layerName}} added.</li>
-            <li ng-repeat="msg in infoMessages"><code class="{{msg.cls}}">{{msg.text}}</code></li>
-        </ul>
-
-    </div>
-</div>
+        <div ng-show="STATE === STATES.POST_PROCESS_RUNNING || (STATE === STATES.COMPLETE && userInput)">
+            <ul class="list-unstyled layer-create-messages">
+                <li ng-if="STATE === STATES.COMPLETE && userInput">Layer {{userInput.layerName}} added.</li>
+                <li ng-repeat="msg in infoMessages"><code class="{{msg.cls}}">{{msg.text}}</code></li>
+            </ul>
+        </div>
+    </md-content>
+</section>
