--- a/angular/src/js/admin/layer-create.html
+++ b/angular/src/js/admin/layer-create.html
@@ -8,7 +8,7 @@
         <p ng-if="!STATE">Waiting to establish connection...</p>
 
         <div ng-show="STATE === STATES.FILE_UPLOAD">
-            <p>Start by uploading the source of your layer (currently only zipped shapfile).</p>
+            <p>Start by uploading the source of your layer (currently only zipped shapfile or ndjson).</p>
             <input type="file" file-model="fileToUpload" file-resource="fileResource" />
         </div>
 
